// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults renders 'keep typing' correctly 1`] = `
<div>
  <WithStyles(Typography)
    className=""
  >
     Keep typing!
  </WithStyles(Typography)>
  <WithStyles(List)>
    <WithStyles(ListItem)
      button={true}
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        primary="BUSCOM 629 Employment Law"
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      button={true}
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        primary="BUSCOM 631 Entrepreneurship Law"
      />
    </WithStyles(ListItem)>
  </WithStyles(List)>
</div>
`;

exports[`SearchResults renders 'no results' correctly 1`] = `
<WithStyles(Typography)
  className=""
>
  No results
</WithStyles(Typography)>
`;

exports[`SearchResults renders correctly 1`] = `
<div>
  <WithStyles(List)>
    <WithStyles(ListItem)
      button={true}
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        primary="BUSCOM 629 Employment Law"
      />
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      button={true}
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        primary="BUSCOM 631 Entrepreneurship Law"
      />
    </WithStyles(ListItem)>
  </WithStyles(List)>
</div>
`;

exports[`SearchResults renders loading correctly 1`] = `
<div
  className=""
>
  <WithStyles(CircularProgress) />
</div>
`;
